--- a/.env.development
+++ b/.env.development
@@ -33,6 +33,7 @@ MYSQL_PORT=3306
 MYSQL_DB="test"
 MYSQL_USER="root"
 MYSQL_PASSWORD="root"
+MYSQL_ROOT_PASSWORD="root"
 MYSQL_POOL_TIMEOUT="60000"
 MYSQL_POOL_MAX="10"
 MYSQL_DEBUG=0
