--- a/.env.development
+++ b/.env.development
@@ -28,6 +28,7 @@ MAX_AGE=86400 # 1天
 ALLOW_CREDENTIALS="true"
 # mysql 配置
 MYSQL_ENABLE=1
+MYSQL_URL="mysql://test3:test3@localhost:3306/test"
 MYSQL_HOST="127.0.0.1"
 MYSQL_PORT=3306
 MYSQL_DB="test"
